api create and update director
