# swagger-api.yaml
@@ -1591,6 +1591,18 @@ paths:
           required: false
           schema:
             type: string
+        - name: page
+          in: query
+          description: page, default is 1
+          required: false
+          schema:
+            type: string   
+        - name: pageSize
+          in: query
+          description: pageSize, default is 10
+          required: false
+          schema:
+            type: string     
       responses:
         '200':
           description: Successful response
@@ -1703,6 +1715,18 @@ paths:
           required: false
           schema:
             type: string
+        - name: page
+          in: query
+          description: page, default is 1
+          required: false
+          schema:
+            type: string   
+        - name: pageSize
+          in: query
+          description: pageSize, default is 10
+          required: false
+          schema:
+            type: string 
       responses:
         '200':
           description: Successful response
